--- a/src/heal/CMakeLists.txt
+++ b/src/heal/CMakeLists.txt
@@ -7,16 +7,17 @@ set(SOURCES
 	logic.cpp
 	visitors.cpp
 	flow.cpp
+	properties.cpp
 
 	# util
 	util/conjoin.cpp
-	util/construct.cpp
-	util/contains.cpp
+#	util/construct.cpp
+#	util/contains.cpp
 	util/copy.cpp
-	util/equal.cpp
+#	util/equal.cpp
 	util/simplify.cpp
 	util/print.cpp
-	util/replace.cpp
+#	util/replace.cpp
 	util/symbolic.cpp
 )
 
