--- a/src/prover/CMakeLists.txt
+++ b/src/prover/CMakeLists.txt
@@ -3,10 +3,10 @@
 ######## setting up z3 #########
 ################################
 
-# TODO: check version
-find_library(Z3_LIBRARY NAMES z3 REQUIRED)
-find_path(Z3_INCLUDE NAMES "z3++.h" REQUIRED)
-include_directories(${Z3_INCLUDE})
+## TODO: check version
+#find_library(Z3_LIBRARY NAMES z3 REQUIRED)
+#find_path(Z3_INCLUDE NAMES "z3++.h" REQUIRED)
+#include_directories(${Z3_INCLUDE})
 
 
 ################################
@@ -14,17 +14,10 @@ include_directories(${Z3_INCLUDE})
 ################################
 
 set(SOURCES
-	config.cpp
-	error.cpp
-
-	# verify
-	verifyimpl/access.cpp
-	verifyimpl/effects.cpp
-	verifyimpl/interference.cpp
-	verifyimpl/proof.cpp
-	verifyimpl/renaming.cpp
-	verifyimpl/verify.cpp
+	proof.cpp
+	verify.cpp
 )
 
 add_library(Prover ${SOURCES})
-target_link_libraries(Prover CoLa HeaL ${Z3_LIBRARY})
+target_link_libraries(Prover CoLa HeaL)
+#target_link_libraries(Prover CoLa HeaL ${Z3_LIBRARY})
