--- a/src/cola/CMakeLists.txt
+++ b/src/cola/CMakeLists.txt
@@ -67,13 +67,14 @@ set(SOURCES
 	transform/rmConditionalLoops.cpp
 	transform/rmConditionalBranches.cpp
 	transform/rmUselessScopes.cpp
+	transform/simplifyconditions.cpp
+	transform/simplifyReturns.cpp
 
 	# util
 	util/cpExpr.cpp
 	util/cpStmt.cpp
 	util/negExpr.cpp
-	util/print.cpp
-        transform/simplifyconditions.cpp)
+	util/print.cpp)
 
 add_library(CoLa ${antlr4cpp_src_files} ${SOURCES})
 add_dependencies(CoLa antlr4cpp)
