fix + Harris try

--- a/src/tool/CMakeLists.txt
+++ b/src/tool/CMakeLists.txt
@@ -23,6 +23,7 @@ set(BENCHMARKS
         VechevYahavDCAS
         ORVYY
         VechevYahavCAS
+        Michael
 )
 
 foreach (ENTRY IN LISTS BENCHMARKS)
