--- a/src/tool/CMakeLists.txt
+++ b/src/tool/CMakeLists.txt
@@ -22,6 +22,7 @@ include(ExternalTclap)
 set(BENCHMARKS
         VechevYahavDCAS
         ORVYY
+        ORVYYmod
         VechevYahavCAS
         Michael
 )
