rewriting programs&logic

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,9 @@
-add_subdirectory(cola)
-add_subdirectory(heal)
-add_subdirectory(solver)
-add_subdirectory(prover)
-add_subdirectory(tool)
+add_subdirectory(programs)
+add_subdirectory(logics)
+add_subdirectory(engine)
+
+#add_subdirectory(cola)
+#add_subdirectory(heal)
+#add_subdirectory(solver)
+#add_subdirectory(prover)
+#add_subdirectory(tool)
