--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,13 +7,13 @@ cmake_minimum_required(VERSION 3.5)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# # set default release type
+# set default release type
 if(NOT CMAKE_BUILD_TYPE)
 	set(CMAKE_BUILD_TYPE Release)
 endif(NOT CMAKE_BUILD_TYPE)
 
 # remain in testing mode for the moment
-set(CMAKE_BUILD_TYPE Debug)
+# set(CMAKE_BUILD_TYPE Debug)
 # set(CMAKE_BUILD_TYPE RelWithDebInfo)
 # set(CMAKE_VERBOSE_MAKEFILE ON)
 
@@ -32,5 +32,5 @@ include_directories(include)
 add_subdirectory(src)
 
 # installation
-install(FILES benchmark.py DESTINATION ${INSTALL_FOLDER})
-install(DIRECTORY examples DESTINATION ${INSTALL_FOLDER})
+#install(FILES benchmark.py DESTINATION ${INSTALL_FOLDER})
+#install(DIRECTORY examples DESTINATION ${INSTALL_FOLDER})
