--- a/src/engine/CMakeLists.txt
+++ b/src/engine/CMakeLists.txt
@@ -14,12 +14,21 @@ include_directories(${Z3_INCLUDE})
 ################################
 
 set(SOURCES
-#        solver/
+        solver/post_assign_var.cpp
+        solver/post_assign_read.cpp
+        solver/post_assign_write.cpp
+        solver/post_assume.cpp
+        solver/post_malloc.cpp
+        solver/scope.cpp
+        solver/solver.cpp
 
         proof/common.cpp
         proof/api.cpp
         proof/cmd.cpp
         proof/stmt.cpp
+
+        util_eval.cpp
+        util_symbolic.cpp
 
         linearizability.cpp
 )
