--- a/src/engine/CMakeLists.txt
+++ b/src/engine/CMakeLists.txt
@@ -14,6 +14,9 @@ include_directories(${Z3_INCLUDE})
 ################################
 
 set(SOURCES
+        solver/access.cpp
+        solver/interference.cpp
+        solver/join.cpp
         solver/post_assign_var.cpp
         solver/post_assign_read.cpp
         solver/post_assign_write.cpp
@@ -21,16 +24,24 @@ set(SOURCES
         solver/post_malloc.cpp
         solver/scope.cpp
         solver/solver.cpp
+        solver/stability.cpp
 
         proof/common.cpp
         proof/api.cpp
         proof/cmd.cpp
         proof/stmt.cpp
 
+        util_effects.cpp
         util_eval.cpp
+        util_memory.cpp
+        util_stack.cpp
         util_symbolic.cpp
 
+        encoding.cpp
+        encoding_encode.cpp
+        encoding_solve.cpp
         linearizability.cpp
+        static.cpp
 )
 
 add_library(Engine ${SOURCES})
