--- a/src/logics/CMakeLists.txt
+++ b/src/logics/CMakeLists.txt
@@ -4,6 +4,8 @@ set(SOURCES
         util_collect.cpp
         util_copy.cpp
         util_equal.cpp
+        util_make.cpp
+        util_normalize.cpp
         util_print.cpp
         util_rename.cpp
         util_simplify.cpp
