--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
 # Mac
 *.DS_Store
+.idea/*
 
 # Build
 build/*
+cmake-build-debug/*
+cmake-build-release/*
+cmake-build-relwithdebinfo/*
 
 # Prerequisites
 *.d
