parser for programs

--- a/src/parser/CMakeLists.txt
+++ b/src/parser/CMakeLists.txt
@@ -68,16 +68,19 @@ set(SOURCES
         parse.cpp
 
         builder/builder.cpp
+        builder/config.cpp
         builder/expr.cpp
         builder/function.cpp
         builder/lookup.cpp
         builder/program.cpp
         builder/stmt.cpp
         builder/type.cpp
-        builder/variable.cpp
 )
 
 add_library(Parser ${SOURCES} ${ANTLR_PlanktonParser_CXX_OUTPUTS})
 target_link_libraries(Parser Programs Logics antlr4_static)
 #add_dependencies(Parser antlr4_static)
 #target_link_libraries(Parser PRIVATE antlr4_static)
+
+add_executable(ParserTest test.cpp)
+target_link_libraries(ParserTest Parser)
