--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,9 +2,4 @@ add_subdirectory(programs)
 add_subdirectory(logics)
 add_subdirectory(engine)
 add_subdirectory(parser)
-
-#add_subdirectory(cola)
-#add_subdirectory(heal)
-#add_subdirectory(solver)
-#add_subdirectory(prover)
-#add_subdirectory(tool)
+add_subdirectory(tool)
