--- a/src/engine/CMakeLists.txt
+++ b/src/engine/CMakeLists.txt
@@ -58,5 +58,6 @@ set(SOURCES
         static.cpp
 )
 
+find_package (Threads)
 add_library(Engine ${SOURCES})
-target_link_libraries(Engine Programs Logics ${Z3_LIBRARY})
+target_link_libraries(Engine Programs Logics ${Z3_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
