improved error handling

--- a/src/tool/CMakeLists.txt
+++ b/src/tool/CMakeLists.txt
@@ -5,7 +5,8 @@
 
 # TODO: update tclap version
 
-set(TCLAP_REPO ${CMAKE_CURRENT_SOURCE_DIR}/tclap/tclap-1.2.4.tar.gz)
+set(TCLAP_REPO_URL ${CMAKE_CURRENT_SOURCE_DIR}/tclap/tclap-1.2.4.tar.gz)
+set(TCLAP_REPO_HASH 733b26a2dae2ae8acc46fc37974d6d76)
 
 LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/tclap)
 include(ExternalTclap)
