option to change install path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,8 @@
 project(plankton CXX)
 set(TOOL_NAME plankton)
-set(INSTALL_FOLDER plankton)
 
 # built requirements
 cmake_minimum_required(VERSION 3.19 FATAL_ERROR)
-#cmake_policy(SET CMP0114 NEW)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -15,17 +13,9 @@ if(NOT CMAKE_BUILD_TYPE)
 	set(CMAKE_BUILD_TYPE Release)
 endif(NOT CMAKE_BUILD_TYPE)
 
-# remain in testing mode for the moment
+# force debug mode
 # set(CMAKE_BUILD_TYPE Debug)
-# set(CMAKE_BUILD_TYPE RelWithDebInfo)
 # set(CMAKE_VERBOSE_MAKEFILE ON)
-
-# optimization in release mode
-# include(CheckCXXCompilerFlag)
-# CHECK_CXX_COMPILER_FLAG("-march=native" COMPILER_SUPPORTS_MARCH_NATIVE)
-# if(COMPILER_SUPPORTS_MARCH_NATIVE)
-#     set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -march=native")
-# endif()
 
 # be verbose in debug mode
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DENABLE_DEBUG_PRINTING")
@@ -35,9 +25,13 @@ set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DENABLE_TIMER")
 add_definitions(-fno-strict-aliasing)
 add_definitions(-Wall -Wextra)
 add_definitions(-fshow-column)
-# add_definitions(-Wno-unused-parameter -Wno-unused-function)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+
+# installation folder
+if (NOT INSTALL_FOLDER)
+	set(INSTALL_FOLDER plankton)
+endif()
 
 # includes
 include_directories(include)
